# watari

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  csp.rs  db.rs  error.rs  main.rs  oidc.rs  rustypaste.rs  session.rs  templates.rs  token_map.rs
src/routes/: admin.rs  api.rs  decrypt.rs  pages.rs
static/: app.css  app.js
templates/: base.html  error.html
