[package]
name = "watari"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["multipart", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie-private"] }
axum_csrf = "0.11.0"
base64 = "0.22.1"
governor = "0.10.4"
hex = "0.4.3"
hmac = "0.13.0"
humantime = "2.4.0"
openidconnect = "4.0.1"
rand = "0.10.2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["trace", "compression-gzip", "timeout", "limit", "fs"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
